@@ -1,0 +1,3 @@
+.GRASS_CACHE <- new.env(FALSE, parent=globalenv())
+assign("cmdCACHE", list(), envir=.GRASS_CACHE)
+
